maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:9: error: not found: value est
  while(!est sur Biscuit && getDirection == direction.NORTH){
         ^IslandMaze:9: error: not found: value Biscuit
  while(!est sur Biscuit && getDirection == direction.NORTH){
                 ^IslandMaze:9: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.IslandMaze
  while(!est sur Biscuit && getDirection == direction.NORTH){
                                            ^